# Crypt1CLib

./: README.md  VNCOMPINSTALL.md
Crypt1C/: ConfigDumpInfo.xml  Configuration.xml
Crypt1C/CommonModules/: Криптография.xml  КриптографияСерверПовтИсп.xml
Crypt1C/CommonModules/Криптография/Ext/: Module.bsl
Crypt1C/CommonModules/КриптографияСерверПовтИсп/Ext/: Module.bsl
Crypt1C/CommonTemplates/: КомпонентаКриптографии.xml
Crypt1C/DataProcessors/: _ДемоКриптограция.xml
Crypt1C/DataProcessors/_ДемоКриптограция/Forms/: Форма.xml
Crypt1C/DataProcessors/_ДемоКриптограция/Forms/Форма/Ext/: Form.xml
Crypt1C/DataProcessors/_ДемоКриптограция/Forms/Форма/Ext/Form/: Module.bsl
Crypt1C/Languages/: Русский.xml
Crypt1C/Subsystems/: Криптография.xml
Crypt1CLib/: AddInNative.cpp  AddInNative.h  CMakeLists.txt  Crypt1CLib.rc  crypt.cpp  crypt.h  crypt1clib.def  resource.h
